@@ -99,6 +99,14 @@ Turns on XON/XOFF support.
 .I LOCAL
 Ignores the modem control lines (DCD, DTR, etc.)
 .TP
+.B setportcontrol <tcp port> <controls>
+Modify dynamic port controls.  These do not stay between connections.
+Controls are:
+.I DTRHI, DTRLO
+Turns on and off the DTR line.
+.I RTSHI, RTSLO
+Turns on and off the RTS line.
+.TP
 .B setportenable <tcp port> <enable state>
 Sets the port operation state.  Valid states are:
 .I off
